# CxConstructor

./: .gitignore  CxConstructor.py  MyConstructor.py  README.md  build_model_connections.py  get_data.py  internal_model.py  macv1_build_util.py  neuron_group_figure.py  pyproject.toml  sublayer_to_layer_mapping.csv  table1_data.csv  table2_data.csv  tmp.py  tmp2.py  tmp3.py  tmp4.py  tmp_run_brian.py  utilities.py
MacV1Buildup/config_files/: macV1_excel_example.xlsx  macv1_anatomy_buildup.csv  pytest_anatomy_config_9.csv  pytest_anatomy_config_cxc.csv  pytest_physiology_config.csv  pytest_physiology_config_7.csv  schwabe_anatomy_ASF_1dim_200213_insight.csv  schwabe_physiology_ASF_1dim_200211.csv
MacV1Buildup/connections/: NeuronParams.txt
MacV1Buildup/ni_csv_copy/: connections_local_excitatory.csv  connections_local_inhibitory.csv
MacV1Buildup/notebooks/: 01_BC.ipynb  01_SS.ipynb  01_basic_use.ipynb
MacV1Buildup/notebooks/tutorial/: 03_synaptic_currents.ipynb
MacV1Buildup/tables/: PC_apical_dendrites.xlsx  connection_csv_sublayer_to_table2_layer_mapping.csv  layer_name_mapping.xlsx  layer_name_mapping_V1.xlsx  neuron_group_ephys_templates.xlsx  old_layer_name_mapping_V1V2.xlsx  old_layer_name_mapping_V1_ieprops.xlsx  post_syn_compartments.xlsx  post_syn_target_celltypes.xlsx  table1_data.csv  table2_data.csv
cxconstructor/: internal_model.py  neuron_group_figure.py  utilities.py
old/: V1_data.xlsx  build_model_connections.py  get_data.py  macv1_build_util.py  sublayer_to_layer_mapping.csv
